<resources>
    <string name="app_name">LEADERBOARD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders </string>
    <string name="learning_hours">Learning hours,</string>
    <string name="skill_iq">skill IQ score,</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="submission_successful">Submission successful</string>
    <string name="country">country</string>
    <string name="name_hours">name</string>
    <string name="name_skill">name</string>
    <string name="score">score</string>
    <string name="submit">Submit</string>
    <string name="submit_menu">Submit</string>
    <string name="email_address">Email address</string>
    <string name="github_link">Github Link</string>
    <string name="leaderboard">LEADERBOARD</string>
</resources>