<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/custom_border"
    android:orientation="horizontal"
    android:padding="8dp">


    <ImageView
        android:id="@+id/hours_badge"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_hours"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/hours_badge"
        app:layout_constraintTop_toTopOf="@+id/hours_badge" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="hours"
        app:layout_constraintStart_toEndOf="@+id/hours_badge"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/country"
        app:layout_constraintStart_toEndOf="@+id/learners_hours"
        app:layout_constraintTop_toTopOf="@+id/learners_hours" />


    <TextView
        android:id="@+id/learners_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/learning_hours"
        app:layout_constraintStart_toEndOf="@+id/hours"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>

